fix: simplify build cmd

--- a/docs/release-notes/5.42.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.42.0/upgrade-guide.mdx
@@ -74,25 +74,10 @@ If there are any issues, it is due to the `// ts-expect-error` comment in the co
 
 ### Build Your Project
 
-After the upgrade, build your project (`api`, `admin` and `website`):
-
-##### API
-```bash
-yarn webiny build api --env=YOUR_ENVIRONMENT
-```
-##### Admin UI
-```bash
-yarn webiny build admin --env=YOUR_ENVIRONMENT
-```
-##### Website
-```bash
-yarn webiny build website --env=YOUR_ENVIRONMENT
-```
-
-##### All at Once
+After the upgrade, build your **API**, **Admin**, and **Website** project applications:
 
 ```bash
-yarn webiny build api --env=YOUR_ENVIRONMENT && yarn webiny build admin --env=YOUR_ENVIRONMENT && yarn webiny build website --env=YOUR_ENVIRONMENT
+yarn webiny build api,admin,website --env YOUR_ENVIRONMENT
 ```
 
 ### 6. Deploy Your Project
