wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -17,5 +17,8 @@ description: See what's new in Webiny version 5.42.1
 
 ✍️
 
+## Development
 
+### Watching of Admin/Website Project Applications - Allow Skipping Deployment Checks ([#4503](https://github.com/webiny/webiny-js/pull/4503))
 
+✍️
