wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -1,4 +1,5 @@
 ---
+id: 5b449062
 title: Webiny 5.42.1 Changelog
 description: See what's new in Webiny version 5.42.1
 ---
@@ -12,6 +13,11 @@ description: See what's new in Webiny version 5.42.1
 ✍️
 
 ## Security
+
+### Improving the Headless CMS Permissions UI/UX ([#4517](https://github.com/webiny/webiny-js/pull/4517))
+
+✍️
+
 
 ### `configureAdminCognitoFederation` - Use Name Instead of Type Where Needed ([#4506](https://github.com/webiny/webiny-js/pull/4506))
 
