wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -28,3 +28,9 @@ description: See what's new in Webiny version 5.42.1
 ### Watching of Admin/Website Project Applications - Allow Skipping Deployment Checks ([#4503](https://github.com/webiny/webiny-js/pull/4503))
 
 ✍️
+
+## Deployments
+
+### Enterprise VPC Configurations - Ensure VPC Set To True If Not Defined ([#4521](https://github.com/webiny/webiny-js/pull/4521)
+
+✍️
