--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -4,24 +4,50 @@ title: Webiny 5.42.1 Changelog
 description: See what's new in Webiny version 5.42.1
 ---
 
+import cmsSecurityPermissionsUi from "./assets/hcms-security-permissions-ui.png";
+
 <GithubRelease version={"5.42.1"} />
 
 ## Headless CMS
 
-### fix: consolidate and export plugin factories via `@webiny/api-serverless-cms` ([#4502](https://github.com/webiny/webiny-js/pull/4502))
+### Consolidation of Headless CMS Backend Plugin Naming ([#4502](https://github.com/webiny/webiny-js/pull/4502))
 
-✍️
+We noticed there were some naming-related inconsistencies in Headless CMS backend plugins. For example, when defining a new [content model](/docs/headless-cms/extending/content-models-via-code), users would use the `createCmsModelPlugin` factory function. On the other hand, when defining a [single entry model](/docs/release-notes/5.40.6/changelog#introducing-single-entry-models-beta-4228-4298-4296), they would use the `createSingleEntryModel` factory function.
+
+This PR not only consolidates the naming of these plugins but also exports them all via the `@webiny/api-serverless-cms` package. This way, users can import all CMS-related plugins from a single package.
+
+<Alert>
+
+  The existing [Define Content Models via Code](/docs/headless-cms/extending/content-models-via-code) article has been updated to reflect these changes.
+
+</Alert>
 
 ## Security
 
 ### Improving the Headless CMS Permissions UI/UX ([#4517](https://github.com/webiny/webiny-js/pull/4517))
 
-✍️
+A couple of UI improvements have been made to the Headless CMS permissions section. Most importantly, the three sections: Content Model Groups, Content Models, and Content Entries, are now always expanded and visible. 
+
+<Image src={cmsSecurityPermissionsUi} alt="Headless CMS Security Permissions UI" />
+
+Previously, these sections would sometimes be shown and hidden in an unpredictable manner, which made it difficult to manage permissions.
+
+<Alert>
+
+  More information on the exact changes can be found in the linked [#4517](https://github.com/webiny/webiny-js/pull/4517) pull request.
+
+</Alert>
 
 
 ### `configureAdminCognitoFederation` - Use Name Instead of Type Where Needed ([#4506](https://github.com/webiny/webiny-js/pull/4506))
 
-✍️
+Prior to this release, when setting up [Amazon Cognito Federation](/docs/enterprise/cognito-federation) and, more specifically, [modifying the AWS cloud infrastructure](/docs/enterprise/cognito-federation#configure-aws-infrastructure), specifying the name property upon defining an OIDC provider would cause a deployment error:
+
+```bash
+InvalidParameterException: The provider OIDC does not exist for User Pool eu-central-1_xxXXxxXX.
+```
+
+This has now been resolved. Users can now specify the name property when defining an OIDC provider, and the deployment will complete successfully.
 
 ## Development
 
@@ -32,5 +58,17 @@ description: See what's new in Webiny version 5.42.1
 ## Deployments
 
 ### Enterprise VPC Configurations - Ensure VPC Set To True If Not Defined ([#4521](https://github.com/webiny/webiny-js/pull/4521)
+
+✍️
+
+### Refreshing the CI/CD Scaffold ([#4526](https://github.com/webiny/webiny-js/pull/4526))
+
+✍️
+
+### VPCs - OpenSearch Deployed In VPC
+
+✍️
+
+### VPC Added IAM Permissions in DWP
 
 ✍️
