feat: add build and deploy hooks documentation

--- a/docs/release-notes/5.43.0/changelog.mdx
+++ b/docs/release-notes/5.43.0/changelog.mdx
@@ -14,3 +14,13 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 ✍️
 
+## Development
+
+### Watch Command GA
+
+✍️
+
+### ✍️ Introducing Rspack ([#4522](https://github.com/webiny/webiny-js/pull/4522))
+
+✍️
+
