wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -49,6 +49,10 @@ InvalidParameterException: The provider OIDC does not exist for User Pool eu-cen
 
 This has now been resolved. Users can now specify the name property when defining an OIDC provider, and the deployment will complete successfully.
 
+### Cognito Federation - Ensure Admin User Entry Creation ([#4534](https://github.com/webiny/webiny-js/pull/4534))
+
+✍️
+
 ## Development
 
 ### Watching of Admin/Website Project Applications - Allow Skipping Deployment Checks ([#4503](https://github.com/webiny/webiny-js/pull/4503))
