wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -41,7 +41,7 @@ Previously, these sections would sometimes be shown and hidden in an unpredictab
 
 ### `configureAdminCognitoFederation` - Use Name Instead of Type Where Needed ([#4506](https://github.com/webiny/webiny-js/pull/4506))
 
-Prior to this release, when setting up [Amazon Cognito Federation](/docs/enterprise/cognito-federation) and, more specifically, [modifying the AWS cloud infrastructure](/docs/enterprise/cognito-federation#configure-aws-infrastructure), specifying the name property upon defining an OIDC provider would cause a deployment error:
+Prior to this release, when setting up [Amazon Cognito Federation](/docs/enterprise/cognito-federation) and, more specifically, [modifying the AWS cloud infrastructure](/docs/enterprise/cognito-federation#configure-aws-infrastructure), specifying the `name` property upon defining an OIDC provider would cause a deployment error:
 
 ```bash
 InvalidParameterException: The provider OIDC does not exist for User Pool eu-central-1_xxXXxxXX.
@@ -51,7 +51,9 @@ This has now been resolved. Users can now specify the name property when definin
 
 ### Cognito Federation - Ensure Admin User Entry Creation ([#4534](https://github.com/webiny/webiny-js/pull/4534))
 
-✍️
+When using external identity providers, like [Okta](/docs/enterprise/okta-integration) or [Auth0](/docs/enterprise/auth0-integration), Webiny creates internal Admin User entries in the database upon successful login events. These entries can later be used for different purposes. For example, this enables Webiny to list all users when assigning [folder level permissions](https://www.webiny.com/docs/enterprise/aacl/folder-level-permissions#overview). 
+
+With this release, we've fixed an issue where these Admin User entries were not being created when using external IdPs via [Cognito Federation](/www.webiny.com/docs/enterprise/cognito-federation).
 
 ## Development
 
@@ -67,12 +69,4 @@ This has now been resolved. Users can now specify the name property when definin
 
 ### Refreshing the CI/CD Scaffold ([#4526](https://github.com/webiny/webiny-js/pull/4526))
 
-✍️
-
-### VPCs - OpenSearch Deployed In VPC
-
-✍️
-
-### VPC Added IAM Permissions in DWP
-
-✍️
+We've refreshed the GitHub Actions CI/CD scaffold to ensure it's up-to-date with the latest changes. One of the main changes is the update of Node.js version that was used to run the CI/CD pipeline. The version has been updated from 14 all the way to 20.
