fix: upgrade guide related to babel packages

--- a/docs/release-notes/5.42.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.42.0/upgrade-guide.mdx
@@ -80,6 +80,12 @@ After the upgrade, build your **API**, **Admin**, and **Website** project applic
 yarn webiny build api,admin,website --env YOUR_ENVIRONMENT
 ```
 
+<Alert type="info">
+
+  If you have issues with building the project, something related to `@babel/*` packages, please delete your `node_modules` directory, run `yarn` and try building the project again.
+
+</Alert>
+
 ### 6. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
