fix: add a warning re `ENOTFOUND` issue

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -211,6 +211,16 @@ Finally, after the deployment is finished, you can start the new watch command b
 yarn webiny watch api --env dev
 ```
 
+<Alert type={"warning"}>
+In case you experience an error like the following:
+
+```bash
+getaddrinfo ENOTFOUND xyz123abc-ats.iot.eu-central-1.amazonaws.com...
+```
+
+You can fix it by just waiting a bit for the underlying infrastructure to be fully set up. This is a one-time issue, and you shouldn't see it again after the first deployment.
+</Alert>
+
 With all of these steps completed, you should be able to see the new watch command in action. To learn more, we've also created a new section in our existing [`watch command`](/docs/core-development-concepts/basics/watch-command) article, which explains how to use this new feature.
 
 We hope you'll find this new feature useful, and we're looking forward to hearing your feedback!
