docs: add 5.42.1 release note

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -6,6 +6,8 @@ description: See what's new in Webiny version 5.42.1
 
 import cmsSecurityPermissionsUi from "./assets/hcms-security-permissions-ui.png";
 
+import { Alert } from "@/components/Alert";
+
 <GithubRelease version={"5.42.1"} />
 
 ## Headless CMS
@@ -70,3 +72,38 @@ With this release, we've fixed an issue where these Admin User entries were not 
 ### Refreshing the CI/CD Scaffold ([#4526](https://github.com/webiny/webiny-js/pull/4526))
 
 We've refreshed the GitHub Actions CI/CD scaffold to ensure it's up-to-date with the latest changes. One of the main changes is the update of Node.js version that was used to run the CI/CD pipeline. The version has been updated from 14 all the way to 20.
+
+## Other
+
+### Feature-Based Architecture for `app-aco` ([#4513](https://github.com/webiny/webiny-js/pull/4513))
+
+The `@webiny/app-aco` package now follows a feature-based architecture, improving modularity, maintainability, and scalability. The centralized `useFolders` hook has been replaced with dedicated hooks like `useCreateFolder()`, making the API more explicit and predictable.
+
+- **Better Maintainability** – Features are modular and easier to update.
+- **Improved Scalability** – New features can be added without affecting existing ones.
+- **Enhanced Developer Experience** – More focused hooks improve readability and usability.
+
+The `useFolders` hook is deprecated and will be removed in a future release. Update your code as follows:
+
+**Before (Deprecated)**
+```tsx
+import { useFolders } from "@webiny/app-aco";
+
+const { createFolder } = useFolders();
+```
+
+**After (New Approach)**
+```tsx
+import { useCreateFolder } from "@webiny/app-aco";
+
+const { createFolder } = useCreateFolder();
+```
+
+<Alert type="warning"> Migrate to the new hooks, as `useFolders` will be removed in a future release. </Alert> 
+
+
+### Improved Report Dialog for Bulk Actions ([#4550](https://github.com/webiny/webiny-js/pull/4550))
+
+In this release, we have enhanced the report dialog displayed after executing bulk actions. Previously, messages in the dialog were truncated when they exceeded the available space, making it difficult for users to view the full details of the operation.
+
+This enhancement improves the user experience by providing clearer feedback on bulk actions.
