wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -65,13 +65,32 @@ With this release, we've fixed an issue where these Admin User entries were not 
 
 ## Deployments
 
-### Enterprise VPC Configurations - Ensure VPC Set To True If Not Defined ([#4521](https://github.com/webiny/webiny-js/pull/4521)
+### Fixed VPC Configuration for Production Deployment ([#4521](https://github.com/webiny/webiny-js/pull/4521))
 
-✍️
+In case you missed it, Webiny can be deployed into two [deployment modes](/docs/architecture/deployment-modes/introduction): development and production. As the names suggest, the development mode is used for development and testing purposes, while the production mode is used for live applications.
+
+When comparing the two, the main difference is the usage of Amazon VPC (Virtual Private Cloud). In production mode, eligible cloud resources are deployed within a VPC, which provides an additional layer of security and isolation. 
+
+With this release, we've fixed an issue where the VPC configuration would not get applied when deploying in production mode, which is certainly not ideal.
+
+Note that this issue would only occur when using the `/enterprise` version of **Core**, **API**, and **Website** project applications, within respective `webiny.application.ts` files:
+
+```ts
+// apps/core/webiny.application.ts
+import { createCoreApp } from "@webiny/serverless-cms-aws/enterprise";
+
+// apps/api/webiny.application.ts
+import { createApiApp } from "@webiny/serverless-cms-aws/enterprise";
+
+// apps/website/webiny.application.ts
+import { createWebsiteApp } from "@webiny/serverless-cms-aws/enterprise";
+```
+
+When not using the `/enterprise` version, the VPC configuration would be applied correctly.
 
 ### Refreshing the CI/CD Scaffold ([#4526](https://github.com/webiny/webiny-js/pull/4526))
 
-We've refreshed the GitHub Actions CI/CD scaffold to ensure it's up-to-date with the latest changes. One of the main changes is the update of Node.js version that was used to run the CI/CD pipeline. The version has been updated from 14 all the way to 20.
+We've refreshed the [GitHub Actions CI/CD](/docs/core-development-concepts/ci-cd/setup#git-hub-actions) scaffold to ensure it's up-to-date with the latest changes. One of the main changes is the update of Node.js version that was used to run the CI/CD pipeline. The version has been updated from 14 all the way to 20.
 
 ## Other
 
