wip: create 5.42.1 release notes

--- a/docs/release-notes/5.42.1/changelog.mdx
+++ b/docs/release-notes/5.42.1/changelog.mdx
@@ -41,7 +41,7 @@ Previously, these sections would sometimes be shown and hidden in an unpredictab
 </Alert>
 
 
-### `configureAdminCognitoFederation` - Use Name Instead of Type Where Needed ([#4506](https://github.com/webiny/webiny-js/pull/4506))
+### `configureAdminCognitoFederation` - Use Name Instead of Type Where Needed ([#4506](https://github.com/webiny/webiny-js/pull/4506), [#4541](https://github.com/webiny/webiny-js/pull/4541)) 
 
 Prior to this release, when setting up [Amazon Cognito Federation](/docs/enterprise/cognito-federation) and, more specifically, [modifying the AWS cloud infrastructure](/docs/enterprise/cognito-federation#configure-aws-infrastructure), specifying the `name` property upon defining an OIDC provider would cause a deployment error:
 
@@ -51,17 +51,11 @@ InvalidParameterException: The provider OIDC does not exist for User Pool eu-cen
 
 This has now been resolved. Users can now specify the name property when defining an OIDC provider, and the deployment will complete successfully.
 
-### Cognito Federation - Ensure Admin User Entry Creation ([#4534](https://github.com/webiny/webiny-js/pull/4534))
+### Cognito Federation - Ensure Admin User Entry Creation ([#4534](https://github.com/webiny/webiny-js/pull/4534), [#4540](https://github.com/webiny/webiny-js/pull/4540), [#4551](https://github.com/webiny/webiny-js/pull/4551)) 
 
 When using external identity providers, like [Okta](/docs/enterprise/okta-integration) or [Auth0](/docs/enterprise/auth0-integration), Webiny creates internal Admin User entries in the database upon successful login events. These entries can later be used for different purposes. For example, this enables Webiny to list all users when assigning [folder level permissions](https://www.webiny.com/docs/enterprise/aacl/folder-level-permissions#overview). 
 
 With this release, we've fixed an issue where these Admin User entries were not being created when using external IdPs via [Cognito Federation](/www.webiny.com/docs/enterprise/cognito-federation).
-
-## Development
-
-### Watching of Admin/Website Project Applications - Allow Skipping Deployment Checks ([#4503](https://github.com/webiny/webiny-js/pull/4503))
-
-✍️
 
 ## Deployments
 
