fix: update code sample

--- a/docs/developer-docs/5.38.x/page-builder/extending/lexical-editor.mdx
+++ b/docs/developer-docs/5.38.x/page-builder/extending/lexical-editor.mdx
@@ -157,7 +157,7 @@ To add a new Lexical plugin, you need to use the `<Heading.Plugin>` component an
 ```jsx apps/admin/src/App.tsx
 import { LexicalEditorConfig } from "@webiny/app-page-builder";
 
-const { Plugin } = LexicalEditorConfig;
+const { Heading } = LexicalEditorConfig;
 
 const MyPlugin = () => {
   /* Implement your plugin logic here. */
@@ -165,7 +165,7 @@ const MyPlugin = () => {
 };
 
 <LexicalEditorConfig>
-  <Plugin name={"myPlugin"} element={<MyPlugin />} />
+  <Heading.Plugin name={"myPlugin"} element={<MyPlugin />} />
 </LexicalEditorConfig>;
 ```
 
