docs: changed management word to manage API for consistency

--- a/docs/developer-docs/5.37.x/headless-cms/basics/graphql-api.mdx
+++ b/docs/developer-docs/5.37.x/headless-cms/basics/graphql-api.mdx
@@ -52,7 +52,7 @@ Except for the fact that this GraphQL API type allows you to create, edit and pu
 
 #### Read
 
-Unlike the manage GraphQL API, which is used by content managers, the **read** API is used by data consumers - like your public website, a web or mobile application, and others. The API consists of multiple query operations that enable you to retrieve content entries, previously published via the mentioned **management** GraphQL API.
+Unlike the manage GraphQL API, which is used by content managers, the **read** API is used by data consumers - like your public website, a web or mobile application, and others. The API consists of multiple query operations that enable you to retrieve content entries, previously published via the mentioned **manage** GraphQL API.
 
 #### Preview
 
