docs: fixed typo and add link to Lexical website

--- a/docs/developer-docs/5.39.x/headless-cms/basics/migrating-to-webiny.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/basics/migrating-to-webiny.mdx
@@ -65,7 +65,7 @@ To avoid this, you can provide those meta fields as part of your migration scrip
 
 #### Rich text content
 
-Rich text content is typically the most complex content to migrate. This is because it's not just text, it's also images, videos, links, and other media. To make this easier, Webiny provides a rich text editor that you can use to edit your content. This editor is based on Lexical buy Meta and it's fully customizable. The challenge is that almost every text editor out there uses a different structure to store the content, some use JSON structures, and others use HTML and similar. Importing those 3rd party structures directly into Webiny won't work as Lexical won't know how to read them and display the content correctly. To make this easier, Webiny provides a way to convert those 3rd party structures into Lexical-compatible structures. Essentially the goal is to have HTML coming from your existing CMS, as pretty much every rich-text editor out there can convert their native structure into HTML it's the best ingest format. We then provide an HTML to Lexical converter you can use to get a Lexical-compatible JSON structure which you can then store into Webiny. Read more about this [here](/docs/{version}/core-development-concepts/extending-and-customizing/lexical-tools).
+Rich text content is typically the most complex content to migrate. This is because it's not just text, it's also images, videos, links, and other media. To make this easier, Webiny provides a rich text editor that you can use to edit your content. This editor is based on [Lexical](https://lexical.dev/) by Meta and it's fully customizable. The challenge is that almost every text editor out there uses a different structure to store the content, some use JSON structures, and others use HTML and similar. Importing those 3rd party structures directly into Webiny won't work as Lexical won't know how to read them and display the content correctly. To make this easier, Webiny provides a way to convert those 3rd party structures into Lexical-compatible structures. Essentially the goal is to have HTML coming from your existing CMS, as pretty much every rich-text editor out there can convert their native structure into HTML it's the best ingest format. We then provide an HTML to Lexical converter you can use to get a Lexical-compatible JSON structure which you can then store into Webiny. Read more about this [here](/docs/{version}/core-development-concepts/extending-and-customizing/lexical-tools).
 
 #### Migrate assets (images, videos, etc.)
 
