--- a/docs/developer-docs/5.37.x/headless-cms/basics/graphql-api.mdx
+++ b/docs/developer-docs/5.37.x/headless-cms/basics/graphql-api.mdx
@@ -52,7 +52,7 @@ Except for the fact that this GraphQL API type allows you to create, edit and pu
 
 #### Read
 
-Unlike the manage GraphQL API, which is used by content managers, the **read** API is used by data consumers - like your public website, a web or mobile application, and others. The API consists of multiple query operations that enable you to retrieve content entries, previously published via the mentioned **management** GraphQL API.
+Unlike the manage GraphQL API, which is used by content managers, the **read** API is used by data consumers - like your public website, a web or mobile application, and others. The API consists of multiple query operations that enable you to retrieve content entries, previously published via the mentioned **manage** GraphQL API.
 
 #### Preview
 
@@ -95,7 +95,7 @@ The Headless CMS GraphQL API sits behind a security layer that provides fine-gra
 
 The Headless CMS GraphQL API is accessed via multiple URL endpoints, each including the GraphQL API type and locale. This is simply because different combinations of the two yield different GraphQL schemas.
 
-For example, the **read** GraphQL API only allows users to perform queries on different content entries. On the other hand, not only the **manage** type allows querying content entries, but also content models, and groups. Furthermore, it also provides the necessary management-related mutation operations. Finally, different locales can have different content models, which, again, means a different GraphQL schema needs to be in place.
+For example, the **read** GraphQL API only allows users to perform queries on different content entries. On the other hand, the manage type not only allows querying content entries but also content models and groups.. Furthermore, it also provides the necessary management-related mutation operations. Finally, different locales can have different content models, which, again, means a different GraphQL schema needs to be in place.
 
 The following shows how the Headless CMS GraphQL API URL is structured:
 
