--- a/docs/developer-docs/5.41.x/infrastructure/basics/service-manifests.mdx
+++ b/docs/developer-docs/5.41.x/infrastructure/basics/service-manifests.mdx
@@ -78,4 +78,4 @@ const myLambdaArn = myManifest.myLambdaArn;
 
 ## Default Service Manifests
 
-Out of the box, Webiny writes service manifests when deploying the `api` and `website` apps. You can find the definitions of these manifests in the [api](https://github.com/webiny/webiny-js/blob/next/packages/pulumi-aws/src/apps/api/createApiPulumiApp.ts#L324-L332) and [website](https://github.com/webiny/webiny-js/blob/next/packages/pulumi-aws/src/apps/website/createWebsitePulumiApp.ts#L359-L387) pulumi apps.
+Out of the box, Webiny writes service manifests when deploying the `api` and `website` apps. You can find the definitions of these manifests in the [api](https://github.com/webiny/webiny-js/blob/v5.41.0/packages/pulumi-aws/src/apps/api/createApiPulumiApp.ts#L321-L329) and [website](https://github.com/webiny/webiny-js/blob/v5.41.0/packages/pulumi-aws/src/apps/website/createWebsitePulumiApp.ts#L335-L363) pulumi apps.
