wip: create 5.42.2 release notes

--- a/docs/release-notes/5.42.2/changelog.mdx
+++ b/docs/release-notes/5.42.2/changelog.mdx
@@ -8,7 +8,17 @@ description: See what's new in Webiny version 5.42.2
 
 ## Form Builder
 
-### Fixed Validation Issues
+### Fixed Backend Data Validation Issues ([#4567](https://github.com/webiny/webiny-js/pull/4567))
 
-✍️
+With the 5.42.0 release, a regression was introduced that caused validation issues when saving changes in the Form Builder's form editor and also using the Terms of Service feature. 
+
+This issue has been fixed and you can now save changes in the Form Builder without any validation issues.
+
+## Audit Logs
+
+### Audit Logs Menu Item Now Visible in the Sidebar ([#4557](https://github.com/webiny/webiny-js/pull/4557))
+
+Because of a mistake in the 5.42.0 release, the Audit Logs menu item was not visible in the sidebar for users that had this feature enabled.
+
+This issue has been fixed and the Audit Logs menu item is now visible in the sidebar for users that have this feature enabled.
 
