wip: create 5.42.2 release notes

--- a/docs/release-notes/5.42.2/changelog.mdx
+++ b/docs/release-notes/5.42.2/changelog.mdx
@@ -10,7 +10,7 @@ description: See what's new in Webiny version 5.42.2
 
 ### Fixed Backend Data Validation Issues ([#4567](https://github.com/webiny/webiny-js/pull/4567))
 
-With the 5.42.0 release, a regression was introduced that caused validation issues when saving changes in the Form Builder's form editor and also using the Terms of Service feature. 
+With the [5.42.0 release](/docs/release-notes/5.42.0/changelog), a regression was introduced that caused validation issues when saving changes in Form Builder's form editor and also using the Terms of Service feature. 
 
 This issue has been fixed and you can now save changes in the Form Builder without any validation issues.
 
