--- a/docs/release-notes/5.42.2/changelog.mdx
+++ b/docs/release-notes/5.42.2/changelog.mdx
@@ -4,13 +4,35 @@ title: Webiny 5.42.2 Changelog
 description: See what's new in Webiny version 5.42.2
 ---
 
+import validationIndicators from "./assets/validation-indicators.png";
+import autoExpand from "./assets/auto-expand.gif";
+import addValueLabel from "./assets/add-value-label.png";
+
 <GithubRelease version={"5.42.2"} />
+
+## Headless CMS
+
+### Improve Content Entry UX ([#4560](https://github.com/webiny/webiny-js/pull/4560))
+
+We've introduced several UX improvements to make content creation a bit more straightforward:
+
+- all multi-value fields now have a new renderer setting which allows you to specify a label for the _Add Value_ button
+- new items within the multi-value object field are now automatically expanded
+- icons have been normalized across field renderers (delete, move up/down)
+- content entry route now updates the browser tab with the entry's title, if it exists
+- invalid fields now display visual clues to the user, even on deeply nested fields, so it is easier to find the invalid input
+
+<Gallery>
+  <Image src={autoExpand} title={"Auto-Expand New Object Field Items"} />
+  <Image src={addValueLabel} title={"Add Value Label"} />
+  <Image src={validationIndicators} title={"Validation Indicators"} />
+</Gallery>
 
 ## Form Builder
 
 ### Fixed Backend Data Validation Issues ([#4567](https://github.com/webiny/webiny-js/pull/4567))
 
-With the [5.42.0 release](/docs/release-notes/5.42.0/changelog), a regression was introduced that caused validation issues when saving changes in Form Builder's form editor and also using the Terms of Service feature. 
+With the [5.42.0 release](/docs/release-notes/5.42.0/changelog), a regression was introduced that caused validation issues when saving changes in Form Builder's form editor and also using the Terms of Service feature.
 
 This issue has been fixed and you can now save changes in the Form Builder without any validation issues.
 
@@ -20,5 +42,4 @@ This issue has been fixed and you can now save changes in the Form Builder witho
 
 Because of a mistake in the 5.42.0 release, the Audit Logs menu item was not visible in the sidebar for users that had this feature enabled.
 
-This issue has been fixed and the Audit Logs menu item is now visible in the sidebar for users that have this feature enabled.
-
+This issue has been fixed, and the Audit Logs menu item is now visible in the sidebar for users that have this feature enabled.
