docs: update changelog with new features for Content Entry Forms and folder management improvements

--- a/docs/release-notes/5.42.2/changelog.mdx
+++ b/docs/release-notes/5.42.2/changelog.mdx
@@ -7,6 +7,7 @@ description: See what's new in Webiny version 5.42.2
 import validationIndicators from "./assets/validation-indicators.png";
 import autoExpand from "./assets/auto-expand.gif";
 import addValueLabel from "./assets/add-value-label.png";
+import hcmsDecoratableComponents from "./assets/hcms-decoratable-components.png";
 
 <GithubRelease version={"5.42.2"} />
 
@@ -28,6 +29,24 @@ We've introduced several UX improvements to make content creation a bit more str
   <Image src={validationIndicators} title={"Validation Indicators"} />
 </Gallery>
 
+### More Control and Customization for Content Entry Forms ([#4555](https://github.com/webiny/webiny-js/pull/4555) [#4556](https://github.com/webiny/webiny-js/pull/4556))
+
+This update brings **greater flexibility and customization** to the Content Entry Form, improving both layout control and UI customization.
+
+####  Enhanced Editor Width Control
+We are introducing a new `ContentEntryEditorConfig` called `Width`, giving you more flexibility over its layout.
+
+- **Customizable Width** – Define the editor’s width using values like **"100%"** or **"960px"** for a tailored editing experience.  
+- **Model-Specific Control** – Apply width settings to specific content models using **model IDs**, ensuring precise customization.
+
+#### New Decoratable Components
+We've introduced two new decoratable components for greater flexibility in customizing the Content Entry Form:
+
+- **`ContentEntryForm.Header.Meta`** – Customize the metadata section, including model info and status.  
+- **`ContentEntryForm.Header.Title`** – Adjust how entry titles are displayed for a more tailored look.
+
+<Image src={hcmsDecoratableComponents} alt="Headless CMS Content Entry Form - New Decoratable Components" />
+
 ## Form Builder
 
 ### Fixed Backend Data Validation Issues ([#4567](https://github.com/webiny/webiny-js/pull/4567))
@@ -43,3 +62,14 @@ This issue has been fixed and you can now save changes in the Form Builder witho
 Because of a mistake in the 5.42.0 release, the Audit Logs menu item was not visible in the sidebar for users that had this feature enabled.
 
 This issue has been fixed, and the Audit Logs menu item is now visible in the sidebar for users that have this feature enabled.
+
+## Other
+
+### Enhanced Folder Listing and Performance ([#4539](https://github.com/webiny/webiny-js/pull/4539))
+
+We've improved folder listing to make it more **efficient and scalable**. Here's what's new:
+
+- **Handles Large Datasets** – Folder retrieval now supports over 10,000 records, ensuring smooth performance even with extensive data.
+- **New GraphQL Query** – Introducing the `listFoldersCompressed` query for more efficient folder data retrieval.
+
+These updates make folder management faster, more reliable, and ready to scale. 
