fix: file extension

--- a/docs/developer-docs/5.42.x/headless-cms/extending/customize-entry-form-layout.mdx
+++ b/docs/developer-docs/5.42.x/headless-cms/extending/customize-entry-form-layout.mdx
@@ -6,7 +6,7 @@ description: How to create a custom form layout for content model data entry.
 ---
 
 import { Alert } from "@/components/Alert";
-import hmcsCustomEntryMetaTitle from "./assets/hmcs-custom-entry-title-meta.png.png";
+import hmcsCustomEntryMetaTitle from "./assets/hmcs-custom-entry-title-meta.png";
 
 <CanIUseThis since={"5.28.0"} />
 
