docs: update documentation for customizing entry form meta and title components

--- a/docs/developer-docs/5.42.x/headless-cms/extending/customize-entry-form-layout.mdx
+++ b/docs/developer-docs/5.42.x/headless-cms/extending/customize-entry-form-layout.mdx
@@ -1,4 +1,3 @@
-import Image from "next/image";
 ---
 id: 68ccc9a8
 title: Customize Entry Form Layout
@@ -231,14 +230,14 @@ import { ContentEntryEditorConfig } from "@webiny/app-headless-cms";
 <ContentEntryEditorConfig>
 ```
 
-## Custom Meta and Title Elements
+## Custom Meta and Title Components
 
 You can now **customize the Meta and Title** sections in the **Content Entry Form** using **decoratable components**:
 
 - `ContentEntryForm.Header.Meta` – This section typically shows model information and status.
 - `ContentEntryForm.Header.Title` – This section displays the entry's title.
 
-### Example: Custom Meta for "article" Model
+### Custom Meta Decorated Component
 The `Header.Meta` section typically shows model information and status. Let’s override it to display **custom metadata** when editing an "article" entry.
 
 ```tsx
@@ -260,7 +259,7 @@ const CustomContentEntryFormMeta =
     });
 
 ```
-### Example: Custom Title for "article" Model 
+### Custom Title Decorated Component
 The `Header.Title` section displays the entry's title. Let’s modify it to show a custom title when editing an "article" entry.
 
 ```tsx
@@ -285,7 +284,7 @@ const CustomContentEntryFormTitle =
 ### Applying Custom Components
 Now, let's register these custom components in the Admin app:
 
-```diff-tsx
+```diff-tsx apps/admin/src/App.tsx
 export const App = () => {
     return (
         <Admin>
@@ -302,4 +301,4 @@ export const App = () => {
 
 With these customizations, you now have full control over how meta information and titles appear in the Content Entry Form. Whether it's tweaking metadata or refining how titles are displayed, this approach allows third-party developers to tailor the experience to their needs.
 
-<Image src={hmcsCustomEntryMetaTitle} alt="Meta and Title Elements Decorated" />
+<Image src={hmcsCustomEntryMetaTitle} alt="Custom Meta and Title Elements" />
