docs: update changelog

--- a/docs/release-notes/5.42.2/changelog.mdx
+++ b/docs/release-notes/5.42.2/changelog.mdx
@@ -67,9 +67,10 @@ This issue has been fixed, and the Audit Logs menu item is now visible in the si
 
 ### Enhanced Folder Listing and Performance ([#4539](https://github.com/webiny/webiny-js/pull/4539))
 
-We've improved folder listing to make it more **efficient and scalable**. Here's what's new:
+We've optimized folder listing for **greater efficiency and scalability**. Here’s what’s new:
 
-- **Handles Large Datasets** – Folder retrieval now supports over 10,000 records, ensuring smooth performance even with extensive data.
-- **New GraphQL Query** – Introducing the `listFoldersCompressed` query for more efficient folder data retrieval.
+- **Supports Large Datasets** – Folder retrieval now handles up to **10,000 records**, a limit set by **Elasticsearch**, ensuring smooth performance even with extensive data.
+- **New Optimized GraphQL Query** – Introducing `listFoldersCompressed`, which returns data in **Gzip format** for faster and more efficient retrieval.
 
-These updates make folder management faster, more reliable, and ready to scale. 
+These improvements make folder management **faster, more reliable, and highly scalable**.
+
