--- a/docs/developer-docs/5.42.x/headless-cms/extending/customize-folder-fields.mdx
+++ b/docs/developer-docs/5.42.x/headless-cms/extending/customize-folder-fields.mdx
@@ -23,7 +23,7 @@ import hcmsFieldRendererDecorator from "./assets/hcms-field-renderer-decorator.p
 
 ## Overview
 
-Developers can extend the GraphQL schema and the Admin app's user interface by adding custom fields. Since our Headless CMS powers Folders under the hood, introducing a new field is as simple as defining it on the `Folder` model.
+Developers can extend the GraphQL schema and the Admin app's user interface by adding custom fields to Folders. Since our Headless CMS manages Folders, introducing a new field is as simple as defining it on the `Folder` model.
 
 Once the field is defined in the model, it will automatically appear in the GraphQL schema under the `extensions` field. Additionally, this new field will be available in the user interface for creating and editing Folders, alongside default fields like `title`, `slug`, and `parentId`.
 
@@ -92,11 +92,13 @@ yarn webiny deploy api --env=dev
 
 After the deployment is done, your new fields should be visible in the GraphQL schema, and the UI, as demonstrated in the [Overview](#overview) section of this article.
 
-## Customize Field Rendering
+## Customizing Field Rendering
 
-To control how and when a particular field is rendered, you need to configure a field decorator. Decorators are higher order components that allow you to intercept the component, and add custom logic to the rendering process.
+To control how and when a specific field is rendered, you can configure a **field decorator**. Field decorators are higher-order components that let you intercept a component and apply custom logic to its rendering process.
 
-The following code example shows how to create a field decorator, which is only applied to a specific field, when a folder is edited. When the conditions are met, a custom renderer will be applied to that particular field.
+### Example: Conditionally Rendering a Field
+
+The following example demonstrates how to create a field decorator that applies a custom renderer to a specific field when a folder is being edited. When the specified conditions are met, the custom renderer is applied to that field.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
@@ -133,11 +135,20 @@ export const App = () => {
 };
 ```
 
-The `useForm` hook provides access to the current form rendered inside the New/Edit Folder dialog. Using this approach, you can conditionally show or hide fields depending on any folder or form property, swap field renderers like we did in our code example, check for user permissions, etc.
+### Understanding the Implementation
+- `useForm` **Hook**: This hook provides access to the current form inside the New/Edit Folder dialog. By leveraging `useForm`, you can dynamically control field visibility and behavior based on the form properties.
+- `ExtensionFieldDecorator`: This decorator ensures the field is only rendered when specific conditions are met. In this case, the field is hidden if an existing folder is being edited.
+- ContentEntryListConfig`: This component acts as a wrapper, enabling access to configuration utilities for the Headless CMS List view. It must be mounted as a parent of other config components to ensure the configurations are applied correctly.
 
-The `ContentEntryListConfig` is a component which provides access to other components and utilities to configure the Headless Cms List view. You need to mount it as a parent of other config components, to correctly apply the configurations (as shown in the code example).
+### Applying Custom Logic
 
-Once you run your Admin app, and navigate to the desired Content Model, edit an existing folder to see your custom renderer in action. The demonstrated custom renderer might not be the most exciting one, but it shows how you can dynamically apply different renderers depending on the folder and form context.
+Using this approach, you can:
+
+- Conditionally display or hide fields based on folder or form properties.
+- Swap field renderers dynamically to fit different use cases.
+- Implement field-level access control by checking user permissions.
+
+Once you run your Admin app and navigate to the desired Content Model, edit an existing folder to see the custom renderer in action. While this example hides the field, you can extend it to include more advanced field customizations.
 
 <Image
   src={hcmsFieldRendererDecorator}
