--- a/docs/developer-docs/5.42.x/file-manager/customize-folder-fields.mdx
+++ b/docs/developer-docs/5.42.x/file-manager/customize-folder-fields.mdx
@@ -1,5 +1,5 @@
 ---
-id: c3b9f42d
+id: a7d3e91c
 title: Customize Folder Fields
 description: Learn how to add custom fields to the Folders.
 ---
@@ -8,15 +8,15 @@ import { Alert } from "@/components/Alert";
 import { CanIUseThis } from "@/components/CanIUseThis";
 import { Gallery } from "@/components/Image";
 import { WhatYouWillLearn } from "@/components/WhatYouWillLearn";
-import hcmsFoldersFieldsSchema from "./assets/hcms-folder-custom-fields-schema.png";
-import hcmsAdvancedDetails from "./assets/hcms-folder-custom-fields.png";
-import hcmsFieldRendererDecorator from "./assets/hcms-field-renderer-decorator.png";
+import fmFoldersFieldsSchema from "./assets/fm-folder-custom-fields-schema.png";
+import fmAdvancedDetails from "./assets/fm-folder-custom-fields.png";
+import fmFieldRendererDecorator from "./assets/fm-field-renderer-decorator.png";
 
 <CanIUseThis since={"5.42.3"} />
 
 <WhatYouWillLearn>
 
-- how to add custom folder fields to the Headless Cms
+- how to add custom folder fields to the File Manager
 - how to control field rendering in the UI
 
 </WhatYouWillLearn>
@@ -28,13 +28,13 @@ Developers can extend the GraphQL schema and the Admin app's user interface by a
 Once the field is defined in the model, it will automatically appear in the GraphQL schema under the `extensions` field. Additionally, this new field will be available in the user interface for creating and editing Folders, alongside default fields like `title`, `slug`, and `parentId`.
 
 <Gallery>
-  <Image src={hcmsFoldersFieldsSchema} title={"Custom fields in the GraphQL schema"} />
-  <Image src={hcmsAdvancedDetails} title={"Custom fields in the Admin app"} />
+  <Image src={fmFoldersFieldsSchema} title={"Custom fields in the GraphQL schema"} />
+  <Image src={fmAdvancedDetails} title={"Custom fields in the Admin app"} />
 </Gallery>
 
 ## Add a Field
 
-To add a new field, use the `createCmsFolderModelModifier` plugin factory, provided by the `@webiny/api-headless-cms-aco` package.
+To add a new field, use the `createFmFileFolderModelModifier` plugin factory, provided by the `@webiny/api-file-manager-aco` package.
 
 <Alert type="warning">
   The source code below only highlights the changes you need to make to your project file. The rest
@@ -43,16 +43,15 @@ To add a new field, use the `createCmsFolderModelModifier` plugin factory, provi
 
 ```diff-ts apps/api/graphql/src/index.ts
 import {
-    createAcoHcmsContext,
-+   createCmsFolderModelModifier
-} from "@webiny/api-headless-cms-aco";
++   createFmFileFolderModelModifier
+} from "@webiny/api-file-manager-aco";
 
 export const handler = createHandler({
     plugins: [
         // Other plugins were omitted for clarity.
 
         // Add the following code after your existing plugins.
-+       createCmsFolderModelModifier(({ modifier }) => {
++       createFmFileFolderModelModifier(({ modifier }) => {
 +           modifier.addField({
 +               id: "carMake",
 +               fieldId: "carMake",
@@ -82,9 +81,9 @@ In this example, we add two fields: `carMake` and `year`. You can add as many fi
 
 Once the code shown above is applied, you need to deploy your API. Make sure to use the `--env` value that corresponds to your development environment.
 
-This plugin is specifically designed to add fields to folders related to CMS content models. It includes an optional `modelIds` property (`string[]`), allowing you to target specific models.
+This plugin is specifically designed to add fields to folders related to File Manager.
 
-In GraphQL, this plugin prefixes field IDs with `cms_` by default. If the `modelIds` property is specified, the field ID is prefixed with `cms_${modelId}_`.
+In GraphQL, this plugin prefixes field IDs with `fm_file_` by default.
 
 ```shell
 yarn webiny deploy api --env=dev
@@ -104,12 +103,12 @@ The following example demonstrates how to create a field decorator that applies 
 import React from "react";
 import { Admin } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
-+ import { ContentEntryListConfig } from "@webiny/app-headless-cms";
++ import { FileManagerViewConfig } from "@webiny/app-file-manager";
 + import { useForm } from "@webiny/form";
 + import type { FolderItem } from "@webiny/app-aco/types";
 import "./App.scss";
 
-+ const { Browser } = ContentEntryListConfig;
++ const { Browser } = FileManagerViewConfig;
 
 + const ExtensionFieldDecorator = Browser.Folder.ExtensionField.createDecorator(Original => {
 +   return function FieldDecorator(props) {
@@ -127,9 +126,9 @@ export const App = () => {
   return (
     <Admin>
       <Cognito />
-+     <ContentEntryListConfig>
-+       <ExtensionFieldDecorator id={"cms_year"} />
-+     </ContentEntryListConfig>
++     <FileManagerViewConfig>
++       <ExtensionFieldDecorator id={"fm_file_year"} />
++     </FileManagerViewConfig>
     </Admin>
   );
 };
@@ -138,7 +137,7 @@ export const App = () => {
 ### Understanding the Implementation
 - `useForm` **Hook**: This hook provides access to the current form inside the New/Edit Folder dialog. By leveraging `useForm`, you can dynamically control field visibility and behavior based on the form properties.
 - `ExtensionFieldDecorator`: This decorator ensures the field is only rendered when specific conditions are met. In this case, the field is hidden if an existing folder is being edited.
-- `ContentEntryListConfig`: This component acts as a wrapper, enabling access to configuration utilities for the Headless CMS List view. It must be mounted as a parent of other config components to ensure the configurations are applied correctly.
+- `FileManagerViewConfig`: This component acts as a wrapper, enabling access to configuration utilities for the File Manager List view. It must be mounted as a parent of other config components to ensure the configurations are applied correctly.
 
 ### Applying Custom Logic
 
@@ -148,9 +147,9 @@ Using this approach, you can:
 - Swap field renderers dynamically to fit different use cases.
 - Implement field-level access control by checking user permissions.
 
-Once you run your Admin app and navigate to the desired Content Model, edit an existing folder to see the custom renderer in action. While this example hides the field, you can extend it to include more advanced field customizations.
+Once you run your Admin app and open the File Manager, edit an existing folder to see the custom renderer in action. While this example hides the field, you can extend it to include more advanced field customizations.
 
 <Image
-  src={hcmsFieldRendererDecorator}
+  src={fmFieldRendererDecorator}
   title="Custom renderer is applied to 'carMake' field"
 />
