--- a/docs/release-notes/5.42.3/changelog.mdx
+++ b/docs/release-notes/5.42.3/changelog.mdx
@@ -8,7 +8,7 @@ import acoFolderFields from "./assets/aco-folder-fields.png";
 
 <GithubRelease version={"5.42.3"} />
 
-## Other Improvements
+## Advanced Content Organization (ACO)
 
 ### Custom Fields for ACO Folders ([#4561](https://github.com/webiny/webiny-js/pull/4561))
 
@@ -31,11 +31,18 @@ For more details, check out the related documentation:
 - [Adding custom fields to Page Builder folders](/docs/file-manager/extending/customize-folder-fields)
 - [Adding custom fields to File Manager folders](/docs/page-builder/extending/customize-folder-fields)
 
-
-
-
-
-
 <Image src={acoFolderFields} title={"Custom Fields for ACO Folders"} />
 
+### Fixed `listFoldersCompressed` GraphQL Query ([#4599](https://github.com/webiny/webiny-js/pull/4599))
 
+✍️
+
+## Page Builder
+
+### Button Page Element - Fixed "Scroll To Element" Action ([#4606](https://github.com/webiny/webiny-js/pull/4606))
+
+✍️
+
+### Introduced `PbEditorPageElementGroupPlugin` Plugin ([#4598](https://github.com/webiny/webiny-js/pull/4598))
+
+✍️
