--- a/docs/release-notes/5.43.0/changelog.mdx
+++ b/docs/release-notes/5.43.0/changelog.mdx
@@ -4,9 +4,17 @@ title: Webiny 5.43.0 Changelog
 description: See what's new in Webiny version 5.43.0.
 ---
 
-import { GithubRelease } from "@/components/GithubRelease";
+
+import {GithubRelease} from "@/components/GithubRelease";
 
 <GithubRelease version={"5.43.0"} />
+
+## Headless CMS
+
+### Use Heartbeat In Record Locking Mechanism ([#4583](https://github.com/webiny/webiny-js/pull/4583))
+
+We refactored the record locking mechanism to use the heartbeat instead of React `useEffect` to unlock the record.
+Record is unlocked by default after 30 seconds of the system not receiving a heartbeat signal.
 
 ## Deployments
 
@@ -24,3 +32,8 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 ✍️
 
+### TypeScript 5.3.3 ([#4464](https://github.com/webiny/webiny-js/pull/4464))
+
+We have upgraded TypeScript to version `5.3.3`. At this point we cannot go any higher because of the `@rmwc/*` packages.
+
+Also, `fastify` was updated to 4.29.0 - which might affect users which are hooking into the `fastify` handler. If something is wrong in your code, the TypeScript build will break, and it is an easy fix - just check the fastify [docs](https://fastify.dev/docs/v4.29.x/).
