docs: update imports in content model via code article
Refactored import paths to align with the consolidated and renamed HCMS-related
plugin factories introduced in PR #4502 (https://github.com/webiny/webiny-js/pull/4502).

--- a/docs/developer-docs/5.42.x/headless-cms/extending/content-models-via-code.mdx
+++ b/docs/developer-docs/5.42.x/headless-cms/extending/content-models-via-code.mdx
@@ -172,8 +172,13 @@ In this example, we define a new **Product Category** content model, which consi
 
 </Alert>
 
-```diff-ts extensions/models/src/index.ts
-import { createModelPlugin, createModelField } from "@webiny/api-serverless-cms";
+```ts extensions/models/src/index.ts
+import {
+    createModelGroupPlugin,
+    createModelPlugin
+} from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
 
 export const createExtension = () => {
     return [
@@ -306,7 +311,13 @@ In this example, we define a new **Product Review** content model, which consist
 The **Review** field is an **object** field that consists of two subfields: **Review Title** and **Review Description**. Also, via the `multipleValues: true` flag, the **Review** field is set to allow multiple values. In other words, a single product review can consist of multiple review titles and descriptions.
 
 ```ts extensions/models/src/index.ts
-import { createModelPlugin, createModelField } from "@webiny/api-serverless-cms";
+import {
+    createModelGroupPlugin,
+    createModelPlugin
+} from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
+
 
 export const createExtension = () => {
     return [
