--- a/docs/developer-docs/5.42.x/headless-cms/extending/content-models-via-code.mdx
+++ b/docs/developer-docs/5.42.x/headless-cms/extending/content-models-via-code.mdx
@@ -42,11 +42,11 @@ In the following sections, we cover a couple of examples that show how to define
 <ExtensionsGettingStarted
   type={"api"}
   name={"models"}
-  dependencies={"@webiny/api-serverless-cms"}
+  dependencies={"@webiny/api-serverless-cms,@webiny/api-headless-cms"}
   scaffoldCommandExtraInfo={
     <>
-      Since we'll be using a couple of utilities from the <code>@webiny/api-serverless-cms</code>{" "}
-      package, we've immediately included it in the list of dependencies. Also, note that the scaffolded
+      Since we'll be using a couple of utilities from the <code>@webiny/api-serverless-cms</code>{" "} and <code>@webiny/api-headless-cms</code>{" "}
+      packages, we've immediately included it in the list of dependencies. Also, note that the scaffolded
       files can be used for all of the examples shown in this guide.
     </>
   }
@@ -56,19 +56,20 @@ In the following sections, we cover a couple of examples that show how to define
 
 In this example, we define a simple **Product** content model, that belongs to the **E-Commerce** content model group.
 
-To create a content model group and a content model, we use `createGroupPlugin` and `createModelPlugin` plugin factories, as shown in the following code snippet.
+To create a content model group and a content model, we use `createModelGroupPlugin` and `createModelPlugin` plugin factories, as shown in the following code snippet.
 
 ```ts extensions/models/src/index.ts
 import {
-    createGroupPlugin,
-    createModelPlugin,
-    createModelField
+    createModelGroupPlugin,
+    createModelPlugin
 } from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
 
 export const createExtension = () => {
     return [
         // Defines a new "E-Commerce" content models group.
-        createGroupPlugin({
+        createModelGroupPlugin({
             id: "ecommerce",
             name: "E-Commerce",
             description: "E-Commerce content model group",
@@ -120,7 +121,7 @@ export const createExtension = () => {
 };
 ```
 
-As we can see, first we define a new content model group via the `createGroupPlugin` plugin factory. The following properties are required:
+As we can see, first we define a new content model group via the `createModelGroupPlugin` plugin factory. The following properties are required:
 
 - `id` - a unique identifier of the content model group
 - `name` - the name of the content model group
@@ -171,12 +172,17 @@ In this example, we define a new **Product Category** content model, which consi
 
 </Alert>
 
-```diff-ts extensions/models/src/index.ts
-import { createModelPlugin, createModelField } from "@webiny/api-serverless-cms";
+```ts extensions/models/src/index.ts
+import {
+    createModelGroupPlugin,
+    createModelPlugin
+} from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
 
 export const createExtension = () => {
     return [
-        createGroupPlugin({
+        createModelGroupPlugin({
             // E-Commerce content model group.
         }),
         createModelPlugin({
@@ -223,14 +229,15 @@ In this example, we add a new field to the **Product** content model that we cre
 
 ```diff-ts extensions/models/src/index.ts
 import {
-    createGroupPlugin,
-    createModelPlugin,
-    createModelField
+    createModelGroupPlugin,
+    createModelPlugin
 } from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
 
 export const createExtension = () => {
     return [
-        createGroupPlugin({
+        createModelGroupPlugin({
             // E-Commerce content model group.
         }),
         createModelPlugin({
@@ -304,11 +311,17 @@ In this example, we define a new **Product Review** content model, which consist
 The **Review** field is an **object** field that consists of two subfields: **Review Title** and **Review Description**. Also, via the `multipleValues: true` flag, the **Review** field is set to allow multiple values. In other words, a single product review can consist of multiple review titles and descriptions.
 
 ```ts extensions/models/src/index.ts
-import { createModelPlugin, createModelField } from "@webiny/api-serverless-cms";
+import {
+    createModelGroupPlugin,
+    createModelPlugin
+} from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
+
 
 export const createExtension = () => {
     return [
-        createGroupPlugin({
+        createModelGroupPlugin({
             // E-Commerce content model group.
         }),
         createModelPlugin({
@@ -432,8 +445,14 @@ With the `authorization` property set to `false`, base authorization checks are 
 In this example, we show how we can define content models and content model groups only for a specific locale, in our case, the `en-US`.
 
 ```ts extensions/models/src/index.ts
-import { createContextPlugin } from "@webiny/api-serverless-cms";
-import { createGroupPlugin, createModelPlugin } from "@webiny/api-serverless-cms";
+import {
+    createContextPlugin,
+    createModelGroupPlugin,
+    createModelPlugin
+} from "@webiny/api-serverless-cms";
+
+import { createModelField } from "@webiny/api-headless-cms";
+
 
 export const createExtension = () => {
   return [
@@ -447,7 +466,7 @@ export const createExtension = () => {
 
       // Register content model and group plugins.
       context.plugins.register([
-        createGroupPlugin({
+        createModelGroupPlugin({
           // ...
         }),
         createModelPlugin({
@@ -466,8 +485,12 @@ As we can see, we've used the `createContextPlugin` first in order to create a n
 In this example, we show how we can define content models and content model groups only for a specific tenant, in our case, the `root`.
 
 ```ts extensions/models/src/index.ts
-import { createContextPlugin } from "@webiny/api-serverless-cms";
-import { createGroupPlugin, createModelPlugin } from "@webiny/api-serverless-cms";
+
+import {
+    createContextPlugin,
+    createModelGroupPlugin,
+    createModelPlugin
+} from "@webiny/api-serverless-cms";
 
 export const createExtension = () => {
   return [
@@ -480,7 +503,7 @@ export const createExtension = () => {
 
       // Register content model and group plugins.
       context.plugins.register([
-        createGroupPlugin({
+        createModelGroupPlugin({
           // ...
         }),
         createModelPlugin({
